RESOLVED FIXED203542
Layout Test http/tests/resourceLoadStatistics/website-data-removal-for-site-navigated-to-with-link-decoration-database.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=203542
Summary Layout Test http/tests/resourceLoadStatistics/website-data-removal-for-site-n...
Kate Cheney
Reported 2019-10-28 16:27:31 PDT
http/tests/resourceLoadStatistics/website-data-removal-for-site-navigated-to-with-link-decoration-database.html is failing almost every other run. flakiness dashboard: https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=http%2Ftests%2FresourceLoadStatistics%2Fwebsite-data-removal-for-site-navigated-to-with-link-decoration-database.html Currently unable to reproduce locally. Likely cause: scheduleStatisticsProcessingRequestIfNecessary() is messing with the callback in website-data-removal-for-site-navigated-to-with-link-decoration-database.html The test calls processStatisticsAndDataRecords() manually when it is finished making changes.
Attachments
Patch (2.00 KB, patch)
2019-10-28 17:07 PDT, Kate Cheney
no flags
Radar WebKit Bug Importer
Comment 1 2019-10-28 16:28:09 PDT
Kate Cheney
Comment 2 2019-10-28 17:07:58 PDT
John Wilander
Comment 3 2019-10-28 17:11:16 PDT
Comment on attachment 382140 [details] Patch LGTM
EWS
Comment 4 2019-10-28 18:12:20 PDT
Comment on attachment 382140 [details] Patch Rejecting attachment 382140 [details] from commit-queue. Katherine_cheney@apple.com does not have committer permissions according to https://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/contributors.json. - If you do not have committer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/contributors.json by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
Kate Cheney
Comment 5 2019-10-28 18:14:02 PDT
Guess I'm still too early...
EWS
Comment 6 2019-10-28 19:59:31 PDT
Comment on attachment 382140 [details] Patch Rejecting attachment 382140 [details] from commit-queue. Katherine_cheney@apple.com does not have committer permissions according to https://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/contributors.json. - If you do not have committer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/contributors.json by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
EWS
Comment 7 2019-10-29 11:16:43 PDT
Comment on attachment 382140 [details] Patch Rejecting attachment 382140 [details] from commit-queue. Katherine_cheney@apple.com does not have committer permissions according to https://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/contributors.json. - If you do not have committer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/contributors.json by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
Truitt Savell
Comment 8 2019-10-29 11:24:21 PDT
*** Bug 203576 has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 9 2019-10-29 12:29:40 PDT
Comment on attachment 382140 [details] Patch Clearing flags on attachment: 382140 Committed r251719: <https://trac.webkit.org/changeset/251719>
WebKit Commit Bot
Comment 10 2019-10-29 12:29:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.